Add remove duplicates

--- a/arrays-101/CMakeLists.txt
+++ b/arrays-101/CMakeLists.txt
@@ -6,5 +6,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_compile_options(-Wall -Wextra -pedantic -Werror -g)
 
-add_executable(merge-sorted-array merge-sorted-array.cpp)
-add_executable(remove-element remove-element.cpp)
+add_executable(max-consecutive-ones introduction/max-consecutive-ones.cpp)
+add_executable(even-number-of-digits introduction/even-number-of-digits.cpp)
+add_executable(squares-of-sorted-array introduction/squares-of-sorted-array.cpp)
+
+add_executable(duplicate-zeros inserting/duplicate-zeros.cpp)
+add_executable(merge-sorted-array inserting/merge-sorted-array.cpp)
+
+add_executable(remove-element deleting/remove-element.cpp)
+add_executable(remove-duplicates-from-sorted-array deleting/remove-duplicates-from-sorted-array.cpp)
