Add replace elements

--- a/arrays-101/CMakeLists.txt
+++ b/arrays-101/CMakeLists.txt
@@ -17,3 +17,6 @@ add_executable(remove-element deleting/remove-element.cpp)
 add_executable(remove-duplicates-from-sorted-array deleting/remove-duplicates-from-sorted-array.cpp)
 
 add_executable(check-if-exist searching/check-if-exist.cpp)
+add_executable(valid-mountain-array searching/valid-mountain-array.cpp)
+
+add_executable(replace-elements in-place/replace-elements.cpp)
