--- a/arrays-101/CMakeLists.txt
+++ b/arrays-101/CMakeLists.txt
@@ -22,3 +22,4 @@ add_executable(valid-mountain-array searching/valid-mountain-array.cpp)
 add_executable(replace-elements in-place/replace-elements.cpp)
 add_executable(remove-duplicates in-place/remove-duplicates.cpp)
 add_executable(move-zeroes in-place/move-zeroes.cpp)
+add_executable(sort-array-by-parity in-place/sort-array-by-parity.cpp)
