Add in-place remove element

--- a/arrays-101/CMakeLists.txt
+++ b/arrays-101/CMakeLists.txt
@@ -23,3 +23,4 @@ add_executable(replace-elements in-place/replace-elements.cpp)
 add_executable(remove-duplicates in-place/remove-duplicates.cpp)
 add_executable(move-zeroes in-place/move-zeroes.cpp)
 add_executable(sort-array-by-parity in-place/sort-array-by-parity.cpp)
+add_executable(remove-element-in-place in-place/remove-element.cpp)
