Add third maximum number

--- a/arrays-101/CMakeLists.txt
+++ b/arrays-101/CMakeLists.txt
@@ -26,3 +26,4 @@ add_executable(sort-array-by-parity in-place/sort-array-by-parity.cpp)
 add_executable(remove-element-in-place in-place/remove-element.cpp)
 
 add_executable(height-checker conclusion/height-checker.cpp)
+add_executable(third-maximum-number conclusion/third-maximum-number.cpp)
