--- a/array-and-string/CMakeLists.txt
+++ b/array-and-string/CMakeLists.txt
@@ -13,3 +13,5 @@ add_executable(plus-one introduction-to-array/plus-one.cpp)
 add_executable(diagonal-traverse introduction-to-2D-array/diagonal-traverse.cpp)
 add_executable(spiral-matrix introduction-to-2D-array/spiral-matrix.cpp)
 add_executable(pascals-triangle introduction-to-2D-array/pascals-triangle.cpp)
+
+add_executable(add-binary introduction-to-string/add-binary.cpp)
