Add array partition one

--- a/array-and-string/CMakeLists.txt
+++ b/array-and-string/CMakeLists.txt
@@ -19,3 +19,4 @@ add_executable(strstr introduction-to-string/strstr.cpp)
 add_executable(longest-common-prefix introduction-to-string/longest-common-prefix.cpp)
 
 add_executable(reverse-string two-pointer-technique/reverse-string.cpp)
+add_executable(array-partition-one two-pointer-technique/array-partition-one.cpp)
