--- a/array-and-string/CMakeLists.txt
+++ b/array-and-string/CMakeLists.txt
@@ -4,8 +4,6 @@ project(leetcode LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_compile_options(-Wall -Wextra -pedantic -Werror -g)
-
 add_executable(find-pivot-index introduction-to-array/find-pivot-index.cpp)
 add_executable(largest-number-at-least-twice introduction-to-array/largest-number-at-least-twice.cpp)
 add_executable(plus-one introduction-to-array/plus-one.cpp)
@@ -21,3 +19,4 @@ add_executable(longest-common-prefix introduction-to-string/longest-common-prefi
 add_executable(reverse-string two-pointer-technique/reverse-string.cpp)
 add_executable(array-partition-one two-pointer-technique/array-partition-one.cpp)
 add_executable(two-sum-two two-pointer-technique/two-sum-two.cpp)
+add_executable(remove-element-two-pointer-technique two-pointer-technique/remove-element.cpp)
