Add two pointer technique max-consecutive-ones

--- a/array-and-string/CMakeLists.txt
+++ b/array-and-string/CMakeLists.txt
@@ -20,3 +20,4 @@ add_executable(reverse-string two-pointer-technique/reverse-string.cpp)
 add_executable(array-partition-one two-pointer-technique/array-partition-one.cpp)
 add_executable(two-sum-two two-pointer-technique/two-sum-two.cpp)
 add_executable(remove-element-two-pointer-technique two-pointer-technique/remove-element.cpp)
+add_executable(max-consecutive-ones-two-pointer-technique two-pointer-technique/max-consecutive-ones.cpp)
