--- a/linked-list/CMakeLists.txt
+++ b/linked-list/CMakeLists.txt
@@ -7,3 +7,4 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_executable(design-linked-list singly-linked-list/design-linked-list.cpp)
 add_executable(linked-list-cycle two-pointer-technique/linked-list-cycle.cpp)
 add_executable(linked-list-cycle-two two-pointer-technique/linked-list-cycle-two.cpp)
+add_executable(intersection-of-two-linked-lists two-pointer-technique/intersection-of-two-linked-lists.cpp)
