Add remove linked list elements

--- a/linked-list/CMakeLists.txt
+++ b/linked-list/CMakeLists.txt
@@ -11,3 +11,4 @@ add_executable(intersection-of-two-linked-lists two-pointer-technique/intersecti
 add_executable(remove-nth-node-from-end-of-list two-pointer-technique/remove-nth-node-from-end-of-list.cpp)
 
 add_executable(reverse-linked-list classic-problems/reverse-linked-list.cpp)
+add_executable(remove-linked-list-elements classic-problems/remove-linked-list-elements.cpp)
