--- a/linked-list/CMakeLists.txt
+++ b/linked-list/CMakeLists.txt
@@ -13,3 +13,4 @@ add_executable(remove-nth-node-from-end-of-list two-pointer-technique/remove-nth
 add_executable(reverse-linked-list classic-problems/reverse-linked-list.cpp)
 add_executable(remove-linked-list-elements classic-problems/remove-linked-list-elements.cpp)
 add_executable(odd-even-linked-list classic-problems/odd-even-linked-list.cpp)
+add_executable(palindrome-linked-list classic-problems/palindrome-linked-list.cpp)
