--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,5 @@ add_link_options(-fsanitize=address)
 add_subdirectory(arrays-101)
 add_subdirectory(array-and-string)
 add_subdirectory(linked-list)
+add_subdirectory(binary-tree)
 add_subdirectory(misc)
