--- a/binary-tree/CMakeLists.txt
+++ b/binary-tree/CMakeLists.txt
@@ -6,3 +6,5 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(binary-tree-preorder-traversal traverse-a-tree/binary-tree-preorder-traversal.cpp)
 add_executable(binary-tree-inorder-traversal traverse-a-tree/binary-tree-inorder-traversal.cpp)
+add_executable(binary-tree-postorder-traversal traverse-a-tree/binary-tree-postorder-traversal.cpp)
+add_executable(binary-tree-level-order-traversal traverse-a-tree/binary-tree-level-order-traversal.cpp)
